h1 was breaking if multi-line, fixed spacing

--- a/source/styles/screen.styl
+++ b/source/styles/screen.styl
@@ -622,7 +622,7 @@ h6
 h1
   font-size 4.5rem
   letter-spacing -2px
-  line-height 2em
+  line-height 6rem
   text-indent -3px
 
 h2
